redactable/tests/ui/redacted_output_raw_string_rejected.stderr
error[E0277]: the trait bound `String: RedactedOutputExt` is not satisfied
  --> tests/ui/redacted_output_raw_string_rejected.rs:14:23
   |
14 |     require_certified(&password);
   |     ----------------- ^^^^^^^^^ the trait `DeclaredRedactable` is not implemented for `String`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `DeclaredRedactable`:
             Arc<T>
             BTreeMap<K, V>
             BTreeSet<T>
             Box<T>
             Cell<T>
             HashMap<K, V, S>
             HashSet<T, S>
             NotSensitiveValue<T>
           and $N others
   = note: required for `String` to implement `RedactedOutputExt`
note: required by a bound in `require_certified`
  --> tests/ui/redacted_output_raw_string_rejected.rs:10:25
   |
10 | fn require_certified<T: RedactedOutputExt>(_: &T) {}
   |                         ^^^^^^^^^^^^^^^^^ required by this bound in `require_certified`
